<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="fill_parent" android:layout_height="fill_parent" app:cardCornerRadius="5.0dip" app:cardPreventCornerOverlap="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="26.0sp" android:gravity="center" android:id="@id/tv_popup_title" android:background="@color/color_app_main" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/main_liked" style="@style/StyleTextOnDark" />
        <TextView android:textSize="18.0sp" android:gravity="center" android:id="@id/tv_popup_massage" android:padding="30.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/like_app_text" style="@style/StyleTextOnLight" />
        <TableRow android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageButton android:id="@id/bt_popup_decline" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_dislike" android:onClick="onDecline" />
            <View android:layout_width="50.0dip" android:layout_height="50.0dip" />
            <ImageButton android:id="@id/bt_popup_approve" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_like" android:onClick="onApprove" />
        </TableRow>
        <Button android:textColor="@color/color_hint_on_light" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/maybe_later" android:onClick="onLater" style="@style/StyleTextOnLight" />
    </LinearLayout>
</android.support.v7.widget.CardView>