<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="fill_parent" android:layout_height="fill_parent" app:cardBackgroundColor="@color/color_app_main" app:cardCornerRadius="4.0dip" app:cardElevation="7.0dip" app:cardPreventCornerOverlap="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:background="@color/color_app_main" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:id="@id/rl_top" android:background="@color/color_app_main" android:layout_width="fill_parent" android:layout_height="60.0dip">
            <TextView android:textSize="20.0sp" android:id="@id/tv_counter_temp" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/StyleTextOnDark" />
            <TextView android:textSize="20.0sp" android:gravity="center" android:id="@id/tv_offerwall_explain" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sms_invite_friends_explanation" android:layout_centerInParent="true" style="@style/StyleTextOnDark" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/ll_ads" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <CheckedTextView android:textSize="20.0sp" android:textColor="@color/color_call_main" android:gravity="center_vertical" android:id="@id/ctv_select_all" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checkMark="?android:listChoiceIndicatorMultiple" android:text="@string/sms_select_all_contacts" style="@style/StyleTextOnLight" />
            <View android:background="@color/color_line" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/ctv_select_all" />
            <ListView android:id="@id/lv_sms" android:paddingTop="1.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:divider="@color/color_line" android:dividerHeight="1.0dip" android:layout_above="@id/sms_cost_explain" android:layout_below="@id/ctv_select_all" />
            <android.support.design.widget.FloatingActionButton android:gravity="center" android:id="@id/bt_send_sms" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" app:borderWidth="0.0dip" app:backgroundTint="@color/color_app_main" />
            <TextView android:textSize="12.0sp" android:gravity="center" android:id="@id/sms_cost_explain" android:background="@color/color_app_main" android:padding="1.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sms_cost_explain" android:layout_alignParentBottom="true" style="@style/StyleTextOnDark" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>